[package]
name = "weather_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
redis_pool = "0.3.0"
serde_json = "1.0.111"
scraper = "0.18.1"
surf = "2.3.2"